--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,60 @@ tiktoken==0.4.0
 faiss-cpu==1.7.4
 protobuf~=3.19.0
 google-generativeai
+
+absl-py
+
+alembic
+altair
+anaconda-client
+anaconda-navigator
+annotated-types
+
+faiss-cpu
+
+
+
+
+imblearn
+importlib-metadata
+
+ipykernel
+ipyleaflet
+ipympl
+ipytablewidgets
+ipython
+
+
+
+
+kt-legacy==1.0.4
+langchain==0.0.305
+langcodes==3.3.0
+langdetect==1.0.9
+langsmith==0.0.41
+
+
+
+pyFUME==0.2.25
+PyGetWindow==0.0.9
+Pygments==2.16.1
+
+PyPDF2==3.0.1
+pyperclip==1.8.2
+
+
+selenium==4.11.2
+semantic-version==2.10.0
+
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+simpful==2.11.0
+six==1.16.0
+sklearn==0.0
+
+sqlparse==0.4.4
+srsly==2.4.5
+stack-data==0.6.3
+starlette==0.27.0
+
+
